[package]
name = "dapnet-api"
description = "Client for the DAPNET amateur paging network API"

version = "0.3.0"

edition = "2021"

license = "MIT"
readme = "README.md"

homepage = "https://github.com/DanNixon/dapnet-api-rust"
repository = "https://github.com/DanNixon/dapnet-api-rust"

categories = ["api-bindings"]
keywords = ["amateur-radio", "dapnet", "ham-radio", "pocsag", "api"]

[dependencies]
chrono = { version = "0.4.20", features = ["serde"] }
derive_builder = "0.20.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
thiserror = "2.0.12"
url = "2.5.0"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
